--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #14131a;
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
@@ -53,4 +52,47 @@ body {
   font-size: 16px;
   line-height: 140%;
   color: rgba(255, 255, 255, 0.8);
+}
+
+.button {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button-text,
+.button-icon {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.button-text {
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.button-premiere {
+  color: #8d0019;
+  background-color: #ffffff;
+}
+
+.button-link {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.button-group {
+  margin-top: 70px;
+}
+
+.venom {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.blood {
+  background: url("../img/blood.png") no-repeat top right,
+    #14131a url("../img/background.png") no-repeat center center / 100%;
 }
