--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #14131a;
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
@@ -92,7 +93,108 @@ body {
   right: 0;
 }
 
-.blood {
-  background: url("../img/blood.png") no-repeat top right,
-    #14131a url("../img/background.png") no-repeat center center / 100%;
+.premiere-bg {
+  background: url("../img/background.png") no-repeat center center / 100%;
+}
+
+.content {
+  display: flex;
+  max-width: 1140px;
+  margin: auto;
+}
+
+.col {
+  flex-basis: 50%;
+}
+
+.content-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 20px;
+}
+
+.content-text {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+  max-width: 423px;
+  margin-bottom: 30px;
+}
+
+.content-subtitle {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 15px;
+  margin-top: 0px;
+}
+
+.list-title {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.list {
+  list-style: none;
+  padding: 0%;
+}
+
+.column-2 {
+  column-count: 2;
+  column-gap: 20px;
+  max-width: 312px;
+}
+
+.list-title {
+  line-height: 1.5;
+}
+
+.content .trailer {
+  width: 356px;
+  height: 205px;
+  background-image: url(../img/trailer-cover.jpg);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 33px;
+}
+
+.trailer .play {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.trailer .play-icon {
+  transform: translate(1px, 2px);
+}
+
+.poster-wrapper {
+  display: flex;
+  align-items: start;
+}
+
+.poster {
+  width: 362px;
+  height: 543px;
+  border-radius: 5px;
+  margin-right: 30px;
+}
+
+.poster-wrapper .content-subtitle {
+  margin-bottom: 5px;
+}
+
+.poster-wrapper .list {
+  margin: 0;
+  margin-bottom: 20px;
 }
