--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,8 +4,13 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
   max-width: 1140px;
+  width: 90%;
   margin: auto;
 }
 
@@ -43,12 +48,17 @@ body {
   display: block;
   font-size: 24px;
   line-height: 28px;
-  margin-bottom: 38px;
+  margin-bottom: 2%;
   color: rgba(255, 255, 255, 0.8);
 }
 
+.film-logo {
+  max-width: 835px;
+  width: 70%;
+}
+
 .hero-discription {
-  margin-top: 40px;
+  margin-top: 3%;
   max-width: 423px;
   font-size: 16px;
   line-height: 140%;
@@ -84,13 +94,16 @@ body {
 }
 
 .button-group {
-  margin-top: 70px;
+  margin-top: 5%;
 }
 
 .venom {
   position: absolute;
   top: 0;
   right: 0;
+  max-width: 728px;
+  width: 40%;
+  max-height: 831px;
 }
 
 .premiere-bg {
@@ -98,7 +111,7 @@ body {
 }
 
 .blood {
-  background: url("../img/blood.png") no-repeat top right,
+  background: url("../img/blood.png") no-repeat top right / 60%,
     #14131a url("../img/background.png") no-repeat center center / 100%;
 }
 
@@ -118,6 +131,7 @@ body {
   line-height: 42px;
   color: rgba(255, 255, 255, 0.8);
   margin-bottom: 20px;
+  margin-top: 0px;
 }
 
 .content-text {
@@ -202,4 +216,79 @@ body {
 .poster-wrapper .list {
   margin: 0;
   margin-bottom: 20px;
+}
+
+.menu-button {
+  display: none;
+}
+@media (max-width: 1024px) {
+  .content {
+    flex-direction: column;
+    margin-bottom: 5%;
+  }
+  .col {
+    margin-bottom: 2%;
+  }
+  .header {
+    margin-bottom: 4%;
+  }
+  .hero {
+    margin-top: 20%;
+  }
+}
+
+@media (max-width: 768px) {
+  .blood {
+    background: #14131a;
+  }
+  .venom {
+    top: 10%;
+  }
+}
+
+@media (max-width: 576px) {
+  .nav-menu {
+    display: none;
+  }
+  .nav {
+    margin-left: auto;
+  }
+  .menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: none;
+    background-color: #14131a;
+    cursor: pointer;
+    color: #ffffff;
+  }
+  .menu-button-text {
+    margin-right: 10px;
+  }
+  .button-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .hero-text {
+    text-align: center;
+  }
+  .poster-wrapper {
+    flex-direction: column;
+  }
+  .poster {
+    margin-bottom: 4%;
+    margin-right: 0;
+    width: 100%;
+    max-width: 350px;
+  }
+  .content .trailer {
+    max-width: 350px;
+    width: 100%;
+  }
+  .column-2 {
+    column-count: 1;
+  }
 }
